<!--
  ~ Copyright 2015 SamuelGjk <samuel.alva@outlook.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">BPic</string>

    <string name="bcy">BCY</string>
    <string name="pixiv">PIXIV</string>

    <string name="close">Close</string>
    <string name="illust">Painting</string>
    <string name="cos">COS</string>
    <string name="daily_illust">Illustrations Daily Rankings</string>
    <string name="settings">Settings</string>

    <string name="separator">&#160;/&#160;</string>
    <string name="cleaning_cache_tip">Cleaning, please wait&#8230;</string>
    <string name="search_pixiv_illust_id">Please input pixiv illust ID</string>
    <string name="re_enter_id">Please re-enter ID</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_wait">please wait&#8230;</string>
    <string name="this_work_was_deleted">This work was deleted</string>
    <string name="no_titile">No Title</string>
    <string name="the_id_does_not_exist">The ID does not exist</string>
    <string name="click_on_reload">Failed to load, please click on reload</string>
    <string name="r18_is_prohibited">R18 is prohibited.</string>

    <!-- settings -->
    <string name="operation">Operation</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="license">Open-source license</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="cache_size">Cache Size:</string>

    <!-- menu -->
    <string name="the_day_after">the day after</string>
    <string name="the_day_before">the day before</string>
    <string name="search">Search</string>
    <string name="save">Save</string>

    <!-- toast tips -->
    <string name="no_network">Please connect to the Internet</string>
    <string name="load_failed">Failed to load, please try again</string>
    <string name="mobile_data">Using Mobile Data</string>
    <string name="no_more">No more</string>
    <string name="no_after_day">Can not go to the future</string>
    <string name="wait_a_minute">Wait a minute</string>
    <string name="ranking_not_updated">Today\'s ranking has not been updated, automatically load the previous day</string>
</resources>
