<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@mipmap/ic_refresh"
            app:fab_colorNormal="@color/primaryColor"
            app:fab_colorPressed="@color/primaryColor"
            app:fab_colorRipple="@color/darkPrimaryColor" />

        <LinearLayout
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <FrameLayout
                android:id="@+id/tab_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/topbar_shadow" />
        </LinearLayout>
    </FrameLayout>

    <com.google.samples.apps.iosched.ui.widget.ScrimInsetsFrameLayout
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFF7F7F7"
        android:clickable="true"
        android:fitsSystemWindows="true"
        app:insetForeground="#4000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_illust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1000"
                android:padding="20dp"
                android:text="@string/illust"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/btn_cos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/cos"
                android:textColor="@color/primaryText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFCCCCCC" />

            <TextView
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/settings"
                android:textColor="@color/primaryText" />
        </LinearLayout>

    </com.google.samples.apps.iosched.ui.widget.ScrimInsetsFrameLayout>
</android.support.v4.widget.DrawerLayout>